# todo-app

./: .gitignore  Dockerfile  README.md  alembic.ini  db.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db  test.py
.github/workflows/: test.yml
app/api/: error_handlers.py  main.py  routes.py
app/config/: apiconfig.py  database.py  dependencies.py  security.py
app/kernel/application/: dto.py  response.py
app/kernel/domain/: entities.py  exceptions.py  repository.py  service.py  value_objects.py
app/kernel/fastapi/: main.py  routes.py
app/kernel/infrastructure/: mapper.py  repository.py
app/kernel/tests/infrastructure/: test_sqlrepo.py
app/migrations/: env.py
app/migrations/versions/: 660a5d59ba35_user_and_tasks_relation.py  b025cbe46059_added_task_model.py  ce2699abf394_added_user_model.py
app/modules/cache/application/: dto.py  service.py
migrations/versions/: b025cbe46059_added_task_model.py
tests/: conftest.py  test.db
tests/cache/application/: test_cache_mem_service.py
tests/cache/infrastructure/: test_memory_repo.py
tests/kernel/domain/: test_entities.py  test_value_object.py
tests/kernel/infrastructure/: test_sqlrepo.py
tests/todo/: conftest.py
tests/todo/application/: test_routes.py  test_service.py
tests/todo/infrastructure/: test_mapper.py  test_repository.py
tests/user/: conftest.py
tests/user/application/: test_dto.py  test_routes.py  test_service.py  test_service_user_cache.py
tests/user/domain/: test_value_objects.py
tests/user/infrastructure/: test_mapper.py  test_repository.py
(+26 files in other folders)
